--- a/Index/Tpl/Public/comm.html
+++ b/Index/Tpl/Public/comm.html
@@ -1,4 +1,3 @@
-	<!-- UY BEGIN -->
-<div id="uyan_frame"></div>
-<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2125520"></script>
-<!-- UY END -->
+<!-- 多说等评论 -->
+
+<!-- 每个页面后显示 -->
