--- a/Index/Tpl/Public/duo_top.html
+++ b/Index/Tpl/Public/duo_top.html
@@ -3,10 +3,9 @@
 	<span class="glyphicon glyphicon-remove text-danger click_show"></span>
 </div>
 <div class="duoshuo_show">
-<!-- UYAN HOT COMMENT BEGIN -->
-<div id="uyan_hotcmt_unit"></div>
-<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2125520"></script> <!-- 如果已经过加载此行JS，即可不用重复加载 -->
-<!-- UYAN HOT COMMENT END -->
+<!-- 社会化评论 -->
+
+<!-- 最新评论 -->
 </div>
 </div>
 <script type="text/javascript">
