--- a/Index/Tpl/Index/index.html
+++ b/Index/Tpl/Index/index.html
@@ -10,6 +10,47 @@
 <include file="Public/head" />
 <include file="Public/search"/>
 <include file="Public/duo_top"/>
+
+<div class="row ten" style="margin: 15px;">
+	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  	<!-- Indicators -->
+  	<ol class="carousel-indicators">
+    	<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    	<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    	<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    	<li data-target="#carousel-example-generic" data-slide-to="3"></li>
+    	<li data-target="#carousel-example-generic" data-slide-to="4"></li>
+  	</ol>
+	<div class="carousel-inner" role="listbox">
+    	<volist name="info" id="vo">
+    		<if condition="$i eq 1">
+    			<div class="item active">
+      				<img src="{$vo['img']}" alt="{$vo['or_name']}" class="img-thumbnail">
+      				<div class="carousel-caption">
+      					<a href="/index.php/Index/video/vid/{$vo['vid']}"><h3>{$vo['name']}</h3></a>
+      				</div>
+    			</div>
+    		<else />
+    			<div class="item">
+      				<img src="{$vo['img']}" alt="{$vo['or_name']}" class="img-thumbnail">
+      				<div class="carousel-caption">
+      					<a href="/index.php/Index/video/vid/{$vo['vid']}"><h3>{$vo['name']}</h3></a>
+      				</div>
+    			</div>
+    		</if>
+    	</volist>
+  	</div>
+  	<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    	<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    	<span class="sr-only">Previous</span>
+  	</a>
+  	<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    	<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    	<span class="sr-only">Next</span>
+  	</a>
+  	</div>
+</div>
+
 <div class="row list_video">
 	
 </div>
