--- a/Index/Tpl/Index/video.html
+++ b/Index/Tpl/Index/video.html
@@ -26,7 +26,7 @@
     				},
     				danmaku: {                                                         // Optional, showing danmaku, ignore this option to hide danmaku
         				id: vid,                                        // Required, danmaku id, NOTICE: it must be unique, can not use these in your new player: `https://api.prprpr.me/dplayer/list`
-        				api: 'http://dm.loli.mba:1024',                             // Required, danmaku api
+        				api: 'https://api.prprpr.me/dplayer/',                             // Required, danmaku api
         				token: '{$token}',                                            // Optional, danmaku token for api
         				maximum: 1000,                                                 // Optional, maximum quantity of danmaku IP base64
     				}
